--- a/tournamentinfo.html
+++ b/tournamentinfo.html
@@ -229,6 +229,37 @@
       transform: rotate(360deg);
     }
   }
+
+  
+
+/* Snackbar styles */
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #4242bf;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 9999;
+  left: 50%;
+  bottom: 30px; /* Changed from top to bottom */
+  font-size: 17px;
+  transform: translateX(-50%);
+}
+
+#snackbar.show {
+  visibility: visible;
+  animation: fadeInOut 3s ease-in-out;
+}
+
+@keyframes fadeInOut {
+  0%, 100% { opacity: 0; }
+  10%, 90% { opacity: 1; }
+}
+
 </style>
 </head>
 
@@ -308,6 +339,7 @@
 </div>
 
   
+<div id="snackbar"></div>
   <!-- end info section -->
 
   <!-- footer section -->
@@ -469,13 +501,13 @@ async function getBalance() {
       return available_balance; // Correctly return the balance
     } else {
       console.error("Failed to fetch balance:", response.statuscode, response.message);
-      alert("Error fetching balance: " + response.message);
+      showSnackbar(response.message);
       return 0; // Return 0 as fallback balance
     }
   } catch (error) {
     hideLoader();
     console.error("Error fetching balance:", error);
-    alert("Unexpected error occurred while fetching balance.");
+    showSnackbar("Unexpected error occurred while fetching balance.");
     return 0; // Return 0 in case of error
   }
 }
@@ -511,7 +543,7 @@ const balance = await getBalance();
 
     // Ensure enough balance
     if (balance<predictionPoints ) {
-      alert("Insufficient balance to place this contest.");
+      showSnackbar("Insufficient balance to place this contest.");
       return;
     }
     const url = BASE_URL+"prediction/predictions/place_contest_question_prediction";
@@ -536,17 +568,17 @@ const balance = await getBalance();
         .then(response => {
             hideLoader(); // Hide loader on success
             if (response.statuscode === 200) {
-                alert(response.message);
+              showSnackbar(response.message);
                 $(`#submitBTN_${questionId}`).prop("disabled", true); 
             } else {
                 console.error("Failed with status:", response.statuscode, response.message);
-                alert("Failed: " + response.message);
+                showSnackbar(response.message);
             }
         })
         .catch(error => {
             hideLoader(); // Hide loader on error
             console.error("Failed:", error.responseText || error);
-            alert("Failed: " + (error.responseText || error));
+            showSnackbar((error.responseText || error));
         });
 }
 
@@ -646,7 +678,7 @@ function renderCards(data) {
       predictionPoints = predictionPointsDropdown ? predictionPointsDropdown.value : null;
 
       if (!answer || !predictionPoints) {
-        alert("Please select or enter an answer and choose a Prediction Points.");
+        showSnackbar("Please select or enter an answer and choose a Prediction Points.");
         return;
       }
 
@@ -734,7 +766,7 @@ function getGroupedTournament() {
         }
             } else {
                 console.error("failed with status:", response.statuscode, response.message);
-                alert("Failed: " + response.message);
+                showSnackbar(response.message);
             }
     // Process response
   }).catch(error => {
@@ -761,7 +793,7 @@ function getTournament() {
          renderCards(data);
     } else {
         console.error("failed with status:", response.statuscode, response.message);
-        alert("Failed: " + response.message);
+        showSnackbar( response.message);
     }
     // Process response
   }).catch(error => {
@@ -846,7 +878,14 @@ function isTokenExpired(token) {
         return true; // Assume invalid tokens are expired
     }
 }
-
+function showSnackbar(message) {
+      const snackbar = document.getElementById("snackbar");
+      snackbar.innerText = message;
+      snackbar.className = "show";
+      setTimeout(() => {
+        snackbar.className = snackbar.className.replace("show", "");
+      }, 3000);
+}
 
 function logout() {
   localStorage.removeItem("b2Win_access_token");
