--- a/index.html
+++ b/index.html
@@ -741,26 +741,6 @@
 
 <div id="snackbar"></div>
 
-<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Important Notice</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-      
-        The site will be available after 2nd January.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 
 
   <!-- footer section -->
@@ -866,9 +846,8 @@ function toggleRegisterButton() {
     // Enable the button only if the checkbox is checked
     registerButton.disabled = !termsCheckbox.checked;
 }
-/*function showRegistrationAlert() {
-  alert("Registration starts from 2nd January");
-}*/
+
+
 
 function register() {
   const termsChecked = document.getElementById('terms_checkbox').checked;
@@ -943,7 +922,7 @@ function register() {
         },
         error: function (xhr, status, error) {
            hideLoader();
-           showSnackbar(xhr.responseText || error);
+           showSnackbar("Please try again!");
             console.error("Login failed:", xhr.responseText || error);
         }
     });
@@ -992,7 +971,7 @@ function resetPassword() {
         },
         error: function (xhr, status, error) {
           hideLoader();
-          showSnackbar(xhr.responseText || error);
+          showSnackbar("Please try again!");
             console.error("failed:", xhr.responseText || error);
         }
     });
@@ -1032,7 +1011,7 @@ function forgotPassword() {
         },
         error: function (xhr, status, error) {
            hideLoader();
-           showSnackbar(xhr.responseText || error);
+           showSnackbar("Please try again!");
             console.error("failed:", xhr.responseText || error);
         }
     });
@@ -1091,7 +1070,7 @@ function otpVerify() {
         },
         error: function (xhr, status, error) {
            hideLoader();
-           showSnackbar(xhr.responseText);
+           showSnackbar("Please try again!");
             console.error("Login failed:", xhr.responseText || error);
         }
     });
@@ -1204,7 +1183,7 @@ if (xhr.status === 200) {
         },
         error: function (xhr, status, error) {
            hideLoader();
-           showSnackbar( xhr.responseText);
+           showSnackbar( "Please try again!");
             console.error("Login failed:", xhr.responseText || error);
         } ,
     beforeSend: function(xhr) {
