--- a/matchinfo.html
+++ b/matchinfo.html
@@ -303,7 +303,7 @@
     </div>
     <div class="col-md-7">
       <!-- Question 1 -->
-      <div style="text-align: right; color: red;padding: 10px;font-style: italic;">* Winning chance per other users</div>
+      <div style="text-align: right; color:  #f3b10a;padding: 10px;font-style: italic;">* Winning chance per other users</div>
 
       <!-- Question 2 -->
       <div class="row align-items-center mb-3" id="question-container">
