--- a/dashboard.html
+++ b/dashboard.html
@@ -256,7 +256,7 @@
       <h2>Tournament</h2>
       <p>Explore the ongoing tournaments below:</p>
       <div>                  
-        <img  src="images/giphy.gif" style="cursor: pointer !important;" onclick="showLeaderBoard();" width="100px">
+        <img  src="images/leaderBoard.png" style="cursor: pointer !important;" onclick="showLeaderBoard();" width="100px">
     </div>
     </div>
     
@@ -277,8 +277,8 @@
 <div id="snackbar"></div>
 
 
-<div class="modal fade" id="winnerList" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+<div class="modal fade " id="winnerList" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle">Top Winner</h5>
@@ -286,7 +286,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" style="overflow: auto;">
         <table class="table table-bordered table-hover">
           <thead class="table-dark">
             <tr>
