--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -178,9 +178,13 @@
 			 <ul>
                 <li> Winners will be determined based on their performance in the Contest as per the scoring system.</li>
                 <li>Prizes are non-transferable and cannot be exchanged for cash or other items.</li>
-                <li>Winners will be contacted via their registered contact details. Failure to respond within 7 days may result in forfeiture of the prize.</li>
+                <li>Winners will be contacted via their registered contact details. Failure to respond within 7 days may result in for feiture of the prize.</li>
             </ul>
-          
+			<p><b>Please note:</b></p>
+            <ul>
+			<li><b>Joining Bonus:</b> Any joining bonus provided is exclusively for participation in games and cannot be withdrawn.</li>
+			<li><b>Non-Withdrawable Bonus Points:</b> Bonus points credited to your account are non-withdrawable and for gameplay only.</li>
+			</ul>
 
 
         </section>
